[gd_scene load_steps=10 format=2]

[ext_resource path="res://GridGame/Menu.gd" type="Script" id=1]
[ext_resource path="res://GridGame/lobby.gd" type="Script" id=2]
[ext_resource path="res://GridGame/bottom_panel.gd" type="Script" id=3]
[ext_resource path="res://Asset/black_background.jpg" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0901961, 0.152941, 0.196078, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.294118, 0.317647, 0.505882, 1 )
corner_detail = 10

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.207843, 0.133333, 0.133333, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.2, 0.113725, 0.137255, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.101961, 0.101961, 0.101961, 1 )

[sub_resource type="Animation" id=4]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 60 ), Vector2( 0, 0 ) ]
}

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="lobby" type="Node2D" parent="CanvasLayer"]
editor/display_folded = true
visible = false
script = ExtResource( 2 )

[node name="background" type="Panel" parent="CanvasLayer/lobby"]
margin_left = 60.0
margin_top = 100.0
margin_right = 740.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 1 )

[node name="Panel" type="Panel" parent="CanvasLayer/lobby"]
editor/display_folded = true
margin_left = 80.0
margin_top = 120.0
margin_right = 310.0
margin_bottom = 390.0
custom_styles/panel = SubResource( 2 )

[node name="player_list" type="RichTextLabel" parent="CanvasLayer/lobby/Panel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 220.0
margin_bottom = 260.0

[node name="readyButton" type="Button" parent="CanvasLayer/lobby/Panel"]
margin_left = 20.0
margin_top = 290.0
margin_right = 209.0
margin_bottom = 328.0
text = "ready"

[node name="bottom_panel" type="Panel" parent="CanvasLayer/lobby"]
margin_left = 340.0
margin_top = 110.0
margin_right = 720.0
margin_bottom = 590.0
custom_styles/panel = SubResource( 3 )
script = ExtResource( 3 )

[node name="chat_display" type="TextEdit" parent="CanvasLayer/lobby/bottom_panel"]
margin_left = 10.0
margin_top = 13.0
margin_right = 370.0
margin_bottom = 407.0
custom_styles/read_only = SubResource( 5 )
readonly = true
show_line_numbers = true
wrap_enabled = true

[node name="chat_input" type="LineEdit" parent="CanvasLayer/lobby/bottom_panel"]
margin_left = 10.0
margin_top = 420.0
margin_right = 370.0
margin_bottom = 450.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/lobby"]
anims/fade_in = SubResource( 4 )

[node name="nameEdit" type="LineEdit" parent="CanvasLayer"]
margin_left = 271.631
margin_top = 377.541
margin_right = 516.631
margin_bottom = 422.541

[node name="JoinButton" type="Button" parent="CanvasLayer"]
margin_left = 330.478
margin_top = 479.515
margin_right = 463.478
margin_bottom = 521.515
text = "Join Server"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Sprite" type="Sprite" parent="ParallaxBackground"]
scale = Vector2( 1.33915, 1.35171 )
texture = ExtResource( 4 )
centered = false
[connection signal="pressed" from="CanvasLayer/lobby/Panel/readyButton" to="." method="_on_readyButton_pressed"]
[connection signal="animation_finished" from="CanvasLayer/lobby/AnimationPlayer" to="CanvasLayer/lobby" method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="CanvasLayer/JoinButton" to="." method="_on_JoinButton_pressed"]
